# Jules-GUI

./: .gitignore  AGENTS.md  README.md  documentation.md  index.html  install_tauri.sh  jcat.py  package-lock.json  package.json  research.md  script.js  setup.py  style.css  test_jcat.py  tsconfig.json  vite.config.ts  vitest.setup.ts
jcat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
jules-scratch/verification/: verify_api_key.py  verify_session_monitoring.py
src/: CustomNode.tsx  DiffViewer.test.tsx  DiffViewer.tsx  OrchestrationCanvas.tsx  activity_view.js  activity_view.test.ts  activity_view.ts  main.js  main.test.js  main.test.ts  main.test.ts.skip  main.ts  models.test.ts  models.ts  orchestration_view.tsx  prompt.test.ts  session_view.js  session_view.test.js  session_view.test.ts  session_view.ts  settings_view.test.ts  settings_view.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_client.rs  git_operations.rs  main.rs  models.rs  workflow_engine.rs
